--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "handler.js",
   "dependencies": {
     "apollo-server": "^2.0.5",
-    "apollo-server-lambda": "^2.0.4",
+    "apollo-server-lambda": "^2.0.0-xrc.11",
     "aws-sdk": "^2.136.0",
     "dotenv": "^6.0.0",
+    "dynamoose": "^0.8.7",
     "eslint-plugin-react": "^7.4.0",
     "faker": "^4.1.0",
     "graphql": "^0.11.7",
+    "graphql-tools": "^3.1.1",
     "lodash": "^4.17.10",
     "yamljs": "^0.3.0"
   },
