--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@ provider:
   stage: dev
   environment:
     STAGE: ${self:custom.stage}
-    # DYNAMODB_TABLE: ${self:service}-names-${self:provider.stage}
+    NODE_ENV: prod
   role: defaultRole
 
 functions:
