--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.1.0",
   "description": "A Serverless GraphQL API on AWS Lambda and DynamoDB with local Docker development.",
   "main": "handler.js",
+  "repository": "https://github.com/chrisfitkin/aws-serverless-graphql-docker",
   "dependencies": {
     "apollo-server": "^2.0.5",
     "apollo-server-lambda": "^2.0.0-xrc.11",
     "aws-sdk": "^2.136.0",
     "dotenv": "^6.0.0",
     "dynamoose": "^0.8.7",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.4.0",
     "faker": "^4.1.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
@@ -18,6 +17,11 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "nodemon": "^1.18.3",
     "serverless": "^1.30.1",
     "serverless-dynamodb-local": "^0.2.33",
@@ -25,7 +29,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --exec serverless offline",
+    "dev": "npm run lint && nodemon --watch src --exec serverless offline",
     "dynamodb:install": "sls dynamodb install",
     "dynamodb": "sls dynamodb start",
     "dynamodb:debug": "SLS_DEBUG=* sls dynamodb start",
@@ -34,7 +38,9 @@
     "docker:stop": "docker-compose stop",
     "docker:build": "docker-compose build",
     "docker:rebuild": "docker-compose build --no-cache",
-    "serverless": "serverless"
+    "serverless": "serverless",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "author": "Chris Fitkin @chrisfitkin",
   "license": "MIT"
