--- a/package.json
+++ b/package.json
@@ -17,18 +17,21 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "core-js": "^2.5.7",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "serverless": "^1.30.1",
     "serverless-dynamodb-local": "^0.2.33",
     "serverless-offline": "^3.25.9"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha \"src/**/*.spec.js\"",
     "dev": "npm run lint && nodemon --watch src --exec serverless offline",
     "dynamodb:install": "sls dynamodb install",
     "dynamodb": "sls dynamodb start",
