--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.1.1",
     "lodash": "^4.17.10",
+    "uuidv4": "^1.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
